--- a/index.html
+++ b/index.html
@@ -1,11 +1,35 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+
+    <title>Kelas 10 B Abudzar Plus | Katalog Karya Digital dan Talenta Siswa</title>
+
+    <meta name="description" content="Katalog talenta digital dari santri Kelas 10 B Abudzar Plus. Lihat profil, UI/UX, dan coding. Menampilkan hasil karya terbaik." />
+
+    <meta name="keywords" content="portofolio santri, katalog talenta, skill digital, proyek AI, UI/UX, coding, pendidikan vokasi, Kelas 10 B Abudzar Plus" />
+
+    <meta name="author" content="Tim Kelas 10 B Abudzar Plus" />
+    <meta name="robots" content="index, follow" />
+
+    <link rel="icon" type="image/png" sizes="32x32" href="src/assets/favicons/favicon-32x32.png" />
+    <meta name="theme-color" content="#ffffff" />
+
+    <meta property="og:title" content="Karya Terbaik Siswa | Portofolio Kelas 10 B Abudzar Plus" />
+    <meta property="og:description" content="Lihat kumpulan proyek AI, Design, dan Coding dari santri Kelas 10 B. Temukan talenta digital muda berpotensi tinggi." />
+    <meta property="og:image" content="https://muhamadilhammubarrok.github.io/project-10b-assets/assets/galeri/Bg-01.webp" />
+    <meta property="og:url" content="https://ganti-dengan-url-website-asli-anda.com" />
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="id_ID" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Kelas 10 B Abudzar Plus | Katalog Karya Digital Siswa" />
+    <meta name="twitter:description" content="Katalog talenta digital dari santri Kelas 10 B. Lihat profil, proyek AI, UI/UX, dan coding." />
+    <meta name="twitter:image" content="https://muhamadilhammubarrok.github.io/project-10b-assets/assets/galeri/Bg-01.webp" />
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
